--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,14 +1,24 @@
-<h1>Complete Company Info!</h1>
-
-<%= form_with model: @company do |form| %>
-  <div class="field">
-    <%= form.label :name %><br />
-    <%= form.text_field :name, placeholder: "Company Name", size: "69" %>
+<section class="flex h-5/6 flex-col m-auto lg:w-3/6 sm:w-3/6 md:w-3/6 space-y-4 mt-5 p-2 text-white">
+  <div class="flex flex-col items-center p-6">
+    <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight md:text-5xl lg:text-6xl text-white">Complete Company Info</h1>
   </div>
-  <div class="field">
-    <%= form.label :logo %><br />
-    <%= form.text_field :logo, placeholder: "Logo url!", size: "69"%>
-  </div>
+  <%= form_with model: @company do |form| %>
+    <div class="mb-3 min-w-0">
+      <%= form.label :name, class:"mb-2 block text-sm font-medium text-white" %>
+      <%= form.text_field :name, placeholder: "Company Name.", size: "69", class:"border text-sm rounded-lg  block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:ring-blue-500 focus:border-blue-500" %>
+    </div>
+    <div class="mb-3 min-w-0">
+      <%= form.label :photo,  class:"mb-2 block text-sm font-medium text-white" %>
+      <%= form.file_field :photo,  size: "69", class:"border text-sm rounded-lg  block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:ring-blue-500 focus:border-blue-500" %>
+    </div>
+    <%= form.button type:"submit", class:"mb-4 border border-green-700 focus:ring-4 focus:outline-none font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center border-green-500 text-green-500 hover:text-white hover:bg-green-900 focus:ring-green-800" do %>
+      <svg aria-hidden="true" class="w-5 h-5 mr-1" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path d="M4.5 12.75l6 6 9-13.5" stroke-linecap="round" stroke-linejoin="round"></path>
+      </svg>
+      <span>Complete</span>
+    <% end %>
+  <% end %>
+</section>
 
-  <%= form.submit %>
-<% end %>
+
+
