--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,4 +1,20 @@
-<h1>My Company</h1>
-<img src="<%= @company.logo %>" alt="">
-<p><%= @company.name %></p>
-<%= link_to "Edit", edit_company_path %>
+<section class="flex h-5/6  flex-col m-auto lg:w-3/6 sm:w-3/6 md:w-3/6 space-y-4 mt-5 p-2 text-white">
+  <div class="flex flex-col items-center p-6 space-y-4">
+    <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight md:text-5xl lg:text-6xl">My Company</h1>
+    <img class="rounded-full w-48 h-48 object-cover" src="<%= url_for(@company.photo) %>" alt="">
+  </div>
+  <div class="mb-2">
+    <p class="mb-2 block text-sm font-medium text-white">Name</p>
+    <p class="border text-sm rounded-lg w-full block p-2.5 bg-gray-700 border-gray-600 text-white ">
+      <%= @company.name %>
+    </p>
+  </div>   
+  <%= button_to edit_company_path(@company), method: "get", class:"text-white focus:ring-4 focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center mr-2 bg-green-600 hover:bg-green-700 focus:ring-green-800" do %>
+    <svg aria-hidden="true" class="w-5 h-5 mr-2 -ml-1"   fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <path d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" stroke-linecap="round" stroke-linejoin="round"></path>
+    </svg>
+    Edit Company
+  <% end %>
+</section>
+
+
