--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,11 +12,8 @@
                 <div class="flex flex-col space-y-4">
                 <div>
                       <%= f.label :role, class: "block text-sm font-medium text-white mb-2" %>
-                      <select id="role" class="border  text-sm rounded-lg  block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:ring-green-500 focus:border-green-500">
-                        <option selected>Choose a role</option>
-                        <option value="applicant">Applicant</option>
-                        <option value="company">Company</option>
-                      </select>
+                      <%= f.select :role, [["Applicant", "applicant"],["Company", "company"]], {}, { class:"border  text-sm rounded-lg  block w-full p-2.5 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:ring-green-500 focus:border-green-500" } %>
+
                   </div>
                   <div>
                       <%= f.label :email, class: "block text-sm font-medium text-white mb-2" %>
