--- a/app/views/job_applications/new.html.erb
+++ b/app/views/job_applications/new.html.erb
@@ -1,9 +1,8 @@
-<section class="grid h-screen place-items-center p-6">
+<section class="flex h-5/6   flex-col m-auto lg:w-3/6 sm:w-3/6 md:w-3/6 space-y-4 mt-5 p-2 text-white">
   <div class="flex flex-col items-center p-6">
-    <h1 class="text-5xl font-extrabold dark:text-white break-words">Applying to<small class="ml-2 font-semibold text-gray-500 dark:text-gray-400"><%= @job_application.job.title %></small></h1>
+    <h1 class="text-5xl font-extrabold dark:text-white break-words text-center">Applying to<small class="ml-2 font-semibold text-gray-500 dark:text-gray-400"><%= @job_application.job.title %></small></h1>
   </div>
   <h3 class="text-3xl font-bold dark:text-white">Questions</h3>
-
   <%= form_with model: @job_application do |form| %>
     <%= form.hidden_field :applicant_id, :value => current_user.applicant.id %>
     <%= form.hidden_field :job_id, :value => params[:job_id] %>
