--- a/app/views/job_applications/show.html.erb
+++ b/app/views/job_applications/show.html.erb
@@ -1,11 +1,38 @@
-<h1>Application!</h1>
-<p>Applicant:<%= link_to @job_application.applicant.fullname, @job_application.applicant %></p>
-<h2>Answers</h2>
-<ol>
-<% @job_application.answers.each do |answer| %>
-  <li>
-    <h3><%= answer.question.title %></h3>
-    <%= answer.answer_text %>
-  </li>
-<% end %>
-</ol>
+<section class="flex h-5/6   flex-col m-auto lg:w-3/6 sm:w-3/6 md:w-3/6 space-y-4 mt-5 p-2 text-white">
+  <%= link_to job_path(@job_application.job) do %>
+    <div class="flex mb-5">
+      <svg class="inline w-5 h-6 text-gray-400 -left-1" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <path d="M15.75 19.5L8.25 12l7.5-7.5" stroke-linecap="round" stroke-linejoin="round"></path>
+      </svg>
+      <div class="text-gray-400">
+          <div>Back To "<%=@job_application.job.title%>" job.</div>
+      </div>
+    </div>  
+  <% end %>
+  <div class="flex flex-col items-center p-6 space-y-4">
+    <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight md:text-5xl lg:text-6xl">Application</h1>
+  </div>
+  <div class="mb-2">
+    <p class="mb-2 block text-sm font-medium text-white">Applicant</p>
+      <%= link_to @job_application.applicant do %>
+        <p class="border text-sm rounded-lg w-full block p-2.5 bg-gray-700 border-gray-600 text-white hover:bg-gray-500">
+          <%= @job_application.applicant.fullname %>
+        </p>
+      <% end %>
+  </div>   
+  <h3 class="text-3xl font-bold text-white">Answers</h3>
+  <% if @job_application.answers.empty? %>
+    <p class="mb-3 font-light text-gray-400 break-words whitespace-pre-line">There's no answers for this application.</p>
+  <% else %>
+    <ol>
+      <% @job_application.answers.each do |answer| %>
+        <li class="mb-4">
+          <p class="mb-2 block text-sm font-medium text-white"><%= answer.question.title %></p>
+          <p class="border text-sm rounded-lg w-full block p-2.5 bg-gray-700 border-gray-600 text-white "><%= answer.answer_text %> </p>
+        </li>
+      <% end %>
+    </ol>
+  <% end %>
+</section>
+
+
