--- a/app/views/applicants/show.html.erb
+++ b/app/views/applicants/show.html.erb
@@ -1,7 +1,9 @@
 <section class="flex h-5/6   flex-col m-auto lg:w-3/6 sm:w-3/6 md:w-3/6 space-y-4 mt-5 p-2 text-white">
   <div class="flex flex-col items-center p-6 space-y-4">
     <h1 class="mb-4 text-4xl font-extrabold leading-none tracking-tight md:text-5xl lg:text-6xl">Profile</h1>
-      <img class="rounded-full w-48 h-48 object-cover" src="<%= url_for(@applicant.photo) %>" alt="">
+      <% if @applicant.photo.attached? %>
+        <img class="rounded-full w-48 h-48 object-cover" src="<%= url_for(@applicant.photo) %>" alt="">
+      <% end %>
   </div>
   <div class="mb-2">
     <p class="mb-2 block text-sm font-medium text-white">Name</p>
